--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "winston": "^3.13.0",
+    "winston-transport": "^4.7.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
