--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc && npm run copy-files",
+    "copy-files": "cp -r ./views ./build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn ./app.ts  "
   },
@@ -11,7 +13,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/ejs": "^3.1.5",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.7.3",
     "config": "^3.3.11",
@@ -36,6 +37,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/config": "^3.3.4",
     "@types/cors": "^2.8.17",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
