--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@socket.io/redis-streams-adapter": "^0.2.2",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.7.3",
     "config": "^3.3.11",
@@ -22,10 +23,12 @@
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
+    "socket.io": "^4.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.13.0",
@@ -40,6 +43,7 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.7",
     "@types/nodemailer": "^6.4.14",
