--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "typeRoots": ["./types/index.d.ts"],
     "noEmitOnError": true,
     "strict": true,
     "module": "CommonJS",
