--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.13.0",
     "winston-transport": "^4.7.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-validation-error": "^3.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
