--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && npm run copy-files",
-    "copy-files": "cp -r ./views ./build",
+    "build": "tsc && npm run copy-files && npm run copy-env",
+    "copy-files": "xcopy \"views\" \"build\\views\" /E /I /Y",
+    "copy-env": "xcopy \".env\" \"build\\.env\" /Y /C",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": " ts-node-dev --files --respawn ./app.ts  ",
     "start": "cross-env NODE_ENV=production node ./build/app.js"
@@ -16,10 +17,12 @@
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
     "@socket.io/redis-streams-adapter": "^0.2.2",
+    "@types/busboy": "^1.5.4",
     "@types/randomcolor": "^0.5.9",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.7.3",
+    "busboy": "^1.6.0",
     "config": "^3.3.11",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
