--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - REDIS_PORT=6379
     networks:
       - app-network
+    volumes:
+      - encrypted_files:/usr/src/app/build/encryptedFiles  
     
   redis:
     image: "redis:7.0-alpine"
@@ -30,3 +32,8 @@ networks:
 
 volumes:
   redis_data:
+  encrypted_files:
+    driver_opts:
+      type: none
+      device: ${HOME}/msgbits/encryptedFiles
+      o: bind
