--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Create .env.production file
-      run: |
-        echo "${{ secrets.ENV_PROD }}" > .env
+    - uses: actions/checkout@v4
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -58,7 +54,7 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Copy files to EC2
       env:
@@ -76,18 +72,23 @@ jobs:
         PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         HOST: ${{ secrets.EC2_HOST }}
         USER: ubuntu
+        DOCKER_REPO: ${{ secrets.DOCKERHUB_USERNAME }}
+        GITHUB_SHA: ${{ github.sha }}
+        ENV_PROD: ${{ secrets.ENV_PROD }}
       run: |
         ssh -i private_key -o StrictHostKeyChecking=no ${USER}@${HOST} "
-          export DOCKER_REPO=${{ env.DOCKER_REPO }}
-          export GITHUB_SHA=${{ github.sha }}
           cd ~/msgbits/backend
+          export DOCKER_REPO=${DOCKER_REPO}
+          export GITHUB_SHA=${GITHUB_SHA}
           mkdir -p ~/msgbits/encryptedFiles
           
           echo 'Pulling latest images...'
           docker-compose pull
-          
+
           echo 'Starting services...'
-          docker-compose up -d
+          echo "$ENV_PROD" > temp_env_file
+          docker-compose --env-file temp_env_file up -d
+          rm temp_env_file
           
           echo 'Pruning old images and containers...'
           docker image prune -af
