--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ name: msgbits
 
 services:
   backend:
-    # image: ${DOCKER_REPO}/backend:${GITHUB_SHA}
+    image: ${DOCKER_REPO}/backend:${GITHUB_SHA}
     build:
       context: .
       dockerfile: Dockerfile
