--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
     "copyBuildFiles": "ts-node ./utils/copyBuildFiles.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --files --respawn ./app.ts",
-    "start": "cross-env NODE_ENV=production node ./build/app.js"
+    "start": "node ./build/app.js"
   },
   "keywords": [],
   "author": "",
@@ -64,7 +64,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
-    "cross-env": "^7.0.3",
+    "@types/ws": "^8.18.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
