--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "infra": "docker compose -f docker-compose.infra.yml up -d",
     "infra:down": "docker compose -f docker-compose.infra.yml down",
-    "dev": "turbo dev",
+    "dev": "pnpm run infra && turbo dev",
     "build": "turbo build",
     "lint": "turbo lint"
   },
