--- a/apps/api/dockerfile
+++ b/apps/api/dockerfile
@@ -12,6 +12,7 @@ WORKDIR /repo
 # Copy only files needed to install + prune
 COPY pnpm-lock.yaml pnpm-workspace.yaml package.json turbo.json tsconfig.json ./
 COPY apps/api/package.json apps/api/package.json
+COPY packages/utils/package.json packages/utils/package.json
 
 # Install deps (turbo is here)
 RUN pnpm install --frozen-lockfile
@@ -22,6 +23,7 @@ COPY . .
 # Run prune
 RUN pnpm exec turbo prune --scope=@msgbits/api --docker
 
+
 # ---------- builder ----------
 FROM base AS builder
 WORKDIR /repo
@@ -29,6 +31,7 @@ WORKDIR /repo
 # Copy pruned workspace
 COPY --from=prune /repo/out/json/ ./
 COPY --from=prune /repo/out/pnpm-lock.yaml ./pnpm-lock.yaml
+COPY --from=prune /repo/tsconfig.json ./tsconfig.json
 
 # Install only pruned deps
 RUN pnpm install --frozen-lockfile
@@ -40,31 +43,39 @@ COPY --from=prune /repo/out/full/ ./
 RUN pnpm exec turbo build --filter=@msgbits/api...
 
 
-# ---------- deploy ----------
-FROM base AS deploy
-WORKDIR /repo
-
-# Copy pruned workspace
-COPY --from=builder /repo ./
-
-# Create production-only output
-RUN pnpm deploy --filter=@msgbits/api --prod --legacy /app
-
-
 # ---------- production ----------
 FROM node:20.5.0-alpine AS production
 
 WORKDIR /app
 RUN addgroup -g 1001 -S nodejs && adduser -S nodejs -u 1001
 
-COPY --from=deploy /app ./
-RUN chown -R nodejs:nodejs /app
+# Copy workspace structure from pruned output
+COPY --from=prune /repo/out/json/ ./
+COPY --from=prune /repo/out/pnpm-lock.yaml ./pnpm-lock.yaml
+
+# Enable corepack and install production deps
+# Use --filter to install for the specific workspace
+RUN corepack enable && pnpm install --prod --frozen-lockfile --filter=@msgbits/api
+
+# Copy the built dist folder
+COPY --from=builder --chown=nodejs:nodejs /repo/apps/api/dist ./apps/api/dist
+
+# Copy built packages if needed
+COPY --from=builder --chown=nodejs:nodejs /repo/packages ./packages
+
+# Copy runtime files (config, public, templates)
+COPY --from=builder --chown=nodejs:nodejs /repo/apps/api/config ./apps/api/config
+COPY --from=builder --chown=nodejs:nodejs /repo/apps/api/public ./apps/api/public
+COPY --from=builder --chown=nodejs:nodejs /repo/apps/api/templates ./apps/api/templates
 
 ENV NODE_ENV=production \
+    NODE_CONFIG_DIR=/app/apps/api/config \
     REDIS_HOST=redis \
     REDIS_PORT=6379
 
 USER nodejs
 EXPOSE 8080
 
-CMD ["node", "dist/index.js"]
+CMD ["node", "apps/api/dist/index.js"]
+#CMD ["tail", "-f", "/dev/null"]
+
