--- a/apps/api/dockerfile
+++ b/apps/api/dockerfile
@@ -4,78 +4,59 @@ WORKDIR /repo
 RUN corepack enable
 
 
-# ---------- prune ----------
-FROM base AS prune
-
-WORKDIR /repo
-
-# Copy only files needed to install + prune
-COPY pnpm-lock.yaml pnpm-workspace.yaml package.json turbo.json tsconfig.json ./
-COPY apps/api/package.json apps/api/package.json
-COPY packages/utils/package.json packages/utils/package.json
-
-# Install deps (turbo is here)
-RUN pnpm install --frozen-lockfile
-
-# Now copy full repo for graph analysis
-COPY . .
-
-# Run prune
-RUN pnpm exec turbo prune --scope=@msgbits/api --docker
-
-
 # ---------- builder ----------
 FROM base AS builder
 WORKDIR /repo
 
-# Copy pruned workspace
-COPY --from=prune /repo/out/json/ ./
-COPY --from=prune /repo/out/pnpm-lock.yaml ./pnpm-lock.yaml
-COPY --from=prune /repo/tsconfig.json ./tsconfig.json
+# Copy workspace configuration
+COPY pnpm-lock.yaml pnpm-workspace.yaml package.json turbo.json tsconfig.json ./
 
-# Install only pruned deps
+# Copy ALL package.json files
+COPY apps/api/package.json ./apps/api/
+COPY apps/web/package.json ./apps/web/
+COPY packages/utils/package.json ./packages/utils/
+
+# Install ALL dependencies
 RUN pnpm install --frozen-lockfile
 
-# Copy pruned source
-COPY --from=prune /repo/out/full/ ./
+# Copy all source code
+COPY apps ./apps
+COPY packages ./packages
 
-# Build API only
-RUN pnpm exec turbo build --filter=@msgbits/api...
+# Build only the API and its dependencies
+RUN pnpm turbo build --filter=@msgbits/api...
+
+# Deploy creates fat node_modules with all dependencies
+RUN pnpm --filter=@msgbits/api deploy --prod --legacy /prod/api
+
+# Copy built files and runtime assets directly
+RUN cp -r /repo/apps/api/config /prod/api/config
+RUN cp -r /repo/apps/api/public /prod/api/public
+RUN cp -r /repo/apps/api/templates /prod/api/templates
 
 
 # ---------- production ----------
 FROM node:20.5.0-alpine AS production
 
 WORKDIR /app
-RUN addgroup -g 1001 -S nodejs && adduser -S nodejs -u 1001
 
-# Copy workspace structure from pruned output
-COPY --from=prune /repo/out/json/ ./
-COPY --from=prune /repo/out/pnpm-lock.yaml ./pnpm-lock.yaml
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001
 
-# Enable corepack and install production deps
-# Use --filter to install for the specific workspace
-RUN corepack enable && pnpm install --prod --frozen-lockfile --filter=@msgbits/api
+# Copy everything from /prod/api (now has correct structure)
+COPY --from=builder --chown=nodejs:nodejs /prod/api ./
 
-# Copy the built dist folder
-COPY --from=builder --chown=nodejs:nodejs /repo/apps/api/dist ./apps/api/dist
-
-# Copy built packages if needed
-COPY --from=builder --chown=nodejs:nodejs /repo/packages ./packages
-
-# Copy runtime files (config, public, templates)
-COPY --from=builder --chown=nodejs:nodejs /repo/apps/api/config ./apps/api/config
-COPY --from=builder --chown=nodejs:nodejs /repo/apps/api/public ./apps/api/public
-COPY --from=builder --chown=nodejs:nodejs /repo/apps/api/templates ./apps/api/templates
-
+# Environment variables
 ENV NODE_ENV=production \
-    NODE_CONFIG_DIR=/app/apps/api/config \
+    NODE_CONFIG_DIR=/app/config \
     REDIS_HOST=redis \
     REDIS_PORT=6379
 
 USER nodejs
+
 EXPOSE 8080
 
-CMD ["node", "apps/api/dist/index.js"]
+CMD ["node", "dist/index.js"]
 #CMD ["tail", "-f", "/dev/null"]
 
