--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@msgbits/utils": "workspace:^1.0.0",
+    "@msgbits/utils": "workspace:*",
     "@aws-sdk/client-s3": "^3.667.0",
     "@aws-sdk/lib-storage": "^3.667.0",
     "@socket.io/admin-ui": "^0.5.1",
