--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -22,5 +22,11 @@
   "devDependencies": {
     "@types/is-odd": "^3.0.4",
     "tsx": "^4.21.0"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
   }
 }
