--- a/apps/api/dockerfile
+++ b/apps/api/dockerfile
@@ -3,37 +3,26 @@ FROM node:20.5.0-alpine AS base
 WORKDIR /repo
 RUN corepack enable
 
-
 # ---------- builder ----------
 FROM base AS builder
 WORKDIR /repo
 
-# Copy workspace configuration
-COPY pnpm-lock.yaml pnpm-workspace.yaml package.json turbo.json tsconfig.json ./
+# Copy full repo for dependency graph
+COPY . .
 
-# Copy ALL package.json files
-COPY apps/api/package.json ./apps/api/
-COPY apps/web/package.json ./apps/web/
-COPY packages/utils/package.json ./packages/utils/
-
-# Install ALL dependencies
+# Install deps needed for turbo prune
 RUN pnpm install --frozen-lockfile
 
-# Copy all source code
-COPY apps ./apps
-COPY packages ./packages
+# Builds @msgbits/api and workspace dependencies(...) it needs
+RUN pnpm --filter=@msgbits/api... build
 
-# Build only the API and its dependencies
-RUN pnpm turbo build --filter=@msgbits/api...
+# Prune only api app
+RUN pnpm exec turbo prune --scope=@msgbits/api --docker
 
 # Deploy creates fat node_modules with all dependencies
 RUN pnpm --filter=@msgbits/api deploy --prod --legacy /prod/api
 
-# Copy built files and runtime assets directly
-RUN cp -r /repo/apps/api/config /prod/api/config
-RUN cp -r /repo/apps/api/public /prod/api/public
-RUN cp -r /repo/apps/api/templates /prod/api/templates
-
+COPY apps/api/public /prod/api/public
 
 # ---------- production ----------
 FROM node:20.5.0-alpine AS production
@@ -58,5 +47,6 @@ USER nodejs
 EXPOSE 8080
 
 CMD ["node", "dist/index.js"]
-#CMD ["tail", "-f", "/dev/null"]
+# Stops container from exiting
+#CMD ["tail", "-f", "/dev/null"] 
 
