--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,13 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@msgbits/utils": "workspace:*",
     "@aws-sdk/client-s3": "^3.667.0",
     "@aws-sdk/lib-storage": "^3.667.0",
     "@socket.io/admin-ui": "^0.5.1",
     "@socket.io/redis-streams-adapter": "^0.2.2",
-    "@types/busboy": "^1.5.4",
-    "@types/randomcolor": "^0.5.9",
     "axios": "^1.7.2",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.7.3",
@@ -54,6 +51,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
+    "@types/busboy": "^1.5.4",
     "@types/config": "^3.3.4",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
@@ -62,13 +60,10 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.4",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.12.7",
     "@types/nodemailer": "^6.4.14",
+    "@types/randomcolor": "^0.5.9",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
-    "@types/ws": "^8.18.1",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "@types/ws": "^8.18.1"
   }
 }
