--- a/apps/web/dockerfile
+++ b/apps/web/dockerfile
@@ -3,43 +3,24 @@ FROM node:20.5.0-alpine AS base
 WORKDIR /repo
 RUN corepack enable
 
-
-# ---------- prune ----------
-FROM base AS prune
-WORKDIR /repo
-
-# Copy minimal workspace files
-COPY pnpm-lock.yaml pnpm-workspace.yaml package.json turbo.json tsconfig.json ./
-COPY apps/web/package.json apps/web/package.json
-
-# Install deps needed for turbo prune
-RUN pnpm install --frozen-lockfile
-
-# Copy full repo for dependency graph
-COPY . .
-
-# Prune only web app
-RUN pnpm exec turbo prune --scope=@msgbits/web --docker
-
-
 # ---------- builder ----------
 FROM base AS builder
 WORKDIR /repo
 
-# Copy pruned manifests
-COPY --from=prune /repo/out/json/ ./
-COPY --from=prune /repo/out/pnpm-lock.yaml ./pnpm-lock.yaml
-COPY --from=prune /repo/tsconfig.json ./tsconfig.json
+# Copy full repo for dependency graph
+COPY . .
 
-# Install pruned deps only
+# Install deps needed for turbo prune
 RUN pnpm install --frozen-lockfile
 
-# Copy pruned source
-COPY --from=prune /repo/out/full/ ./
+# Builds @msgbits/web and workspace dependencies(...) it needs
+RUN pnpm --filter=@msgbits/web... build
 
-# Build Next.js app
-RUN pnpm exec turbo build --filter=@msgbits/web...
+# Prune only web app
+RUN pnpm exec turbo prune --scope=@msgbits/web --docker
 
+# Deploy creates fat node_modules with all dependencies
+RUN pnpm --filter=@msgbits/web deploy --prod --legacy /prod/web 
 
 # ---------- production ----------
 FROM node:20.5.0-alpine AS production
@@ -53,7 +34,7 @@ ENV NODE_ENV=production \
 RUN addgroup -S nodejs -g 1001 && \
     adduser -S -G nodejs -u 1001 nextjs
 
-# Copy standalone output from builder
+# Copy standalone output, package.json and node_modules from builder
 COPY --from=builder --chown=nextjs:nodejs /repo/apps/web/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /repo/apps/web/.next/static ./apps/web/.next/static
 COPY --from=builder --chown=nextjs:nodejs /repo/apps/web/public ./apps/web/public
